--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Yoon's Blog
-bio:                융가의 개발일지
+bio:                Welcome to my Blog😊
 description:        "융가의 <br>개발일지입니다 :)"
 reading_time:       true
 words_per_minute:   200
